# cozo

./: .gitignore  .tool-versions  LICENSE.md  Makefile  README.md  rebar.config
.github/workflows/: test.yaml
c_src/: Makefile  Makefile.new  cozo_nif.c
doc_extras/: cheatsheet.cheatmd  cheatsheet.md
examples/: cozo_tcp.erl
examples/elixir_app/: .gitignore  README.md  mix.exs
examples/elixir_app/lib/: elixir_app.ex
examples/elixir_app/test/: elixir_app_test.exs
examples/erlang_app/: LICENSE.md  README.md  rebar.config
examples/erlang_app/src/: erlang_app.app.src  erlang_app_app.erl  erlang_app_sup.erl
include/: cargo.hrl  cozo.hrl  cozo_test.hrl
native/cozo/: Cargo.toml
native/cozo/.cargo/: config
native/cozo/src/: lib.rs
native/cozo_nif_rust/: Cargo.toml
native/cozo_nif_rust/src/: lib.rs
native/cozoer/: .gitignore  Cargo.toml
native/cozoer/src/: lib.rs
notes/: README.md
notes/0001-integrating-cozodb-in-erlang-ecosystem/: README.md
notes/0002-cozo-erlang-from-c-to-rust/: README.md
src/: cargo.hrl  cozo.app.src  cozo.erl  cozo_app.erl  cozo_db.erl  cozo_nif.erl  cozo_nif_rust.erl  cozo_sup.erl  cozorer_nif.erl  cozoscript.xrl
test/: cozo_SUITE.erl  cozo_db_SUITE.erl  cozo_nif_SUITE.erl
test/cozo_db_SUITE_data/: air-routes-latest-nodes.csv  air-routes.json
